# auth-providers-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/altissimo/auth/: __init__.py  cascade.py  service.py  testing.py
src/altissimo/auth/core/: __init__.py  exceptions.py  models.py  policies.py  telemetry.py
src/altissimo/auth/fastapi/: __init__.py
src/altissimo/auth/flask/: __init__.py
src/altissimo/auth/ninja/: __init__.py
src/altissimo/auth/providers/: __init__.py  api_key.py  firebase.py  google.py  iap.py  jwt.py  oidc.py  webhooks.py
tests/: conftest.py  test_cascade.py  test_exceptions.py  test_fastapi.py  test_flask.py  test_models.py  test_ninja.py  test_policies.py  test_service.py  test_testing.py
tests/providers/: test_api_key.py  test_firebase.py  test_google.py  test_iap.py  test_jwt.py  test_oidc.py  test_webhooks.py
