[project]
name = "altissimo-auth"
version = "0.1.0"
description = "Reusable, framework-agnostic authentication library for Altissimo projects."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Altissimo HQ" },
]
keywords = ["auth", "fastapi", "django-ninja", "firebase", "google", "oidc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
ninja = [
    "django-ninja>=1.0",
]
firebase = [
    "firebase-admin>=6.0,<7.0",
]
google = [
    "google-auth>=2.0,<3.0",
]
all = [
    "fastapi>=0.100.0",
    "django-ninja>=1.0",
    "firebase-admin>=6.0,<7.0",
    "google-auth>=2.0,<3.0",
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "altissimo-auth"
packages = [
    { include = "altissimo", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
pytest-asyncio = ">=0.24"
ruff = ">=0.9"
pre-commit = ">=4.0"

# Include all optional deps in dev for testing
fastapi = ">=0.100.0"
httpx = ">=0.27"  # for FastAPI TestClient
firebase-admin = ">=6.0,<7.0"
google-auth = ">=2.0,<3.0"
django-ninja = ">=1.0"
django = ">=5.0"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["altissimo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["altissimo"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
