[project]
name = "altissimo-auth"
version = "1.0.0"
description = "Reusable, framework-agnostic authentication library for Altissimo projects."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Altissimo HQ" },
]
keywords = ["auth", "fastapi", "django-ninja", "firebase", "google", "oidc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
ninja = [
    "django-ninja>=1.0",
]
firebase = [
    "firebase-admin>=6.0,<7.0",
]
google = [
    "google-auth>=2.0,<3.0",
]
flask = [
    "flask>=2.0",
    "google-auth-oauthlib>=1.2",
]
jwt = [
    "pyjwt>=2.8",
]
all = [
    "fastapi>=0.100.0",
    "django-ninja>=1.0",
    "firebase-admin>=6.0,<7.0",
    "google-auth>=2.0,<3.0",
    "flask>=2.0",
    "google-auth-oauthlib>=1.2",
    "pyjwt>=2.8",
]

[project.urls]
Homepage = "https://github.com/altissimo-hq/auth-providers-python"
Repository = "https://github.com/altissimo-hq/auth-providers-python"
Issues = "https://github.com/altissimo-hq/auth-providers-python/issues"
Changelog = "https://github.com/altissimo-hq/auth-providers-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "altissimo-auth"
packages = [
    { include = "altissimo", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
pytest-asyncio = ">=0.24"
ruff = ">=0.9"
pre-commit = ">=4.0"

# Include all optional deps in dev for testing
fastapi = ">=0.100.0"
httpx = ">=0.27"  # for FastAPI TestClient
firebase-admin = ">=6.0,<7.0"
google-auth = ">=2.0,<3.0"
django-ninja = ">=1.0"
django = ">=5.0"
flask = ">=2.0"
google-auth-oauthlib = ">=1.2"
pyjwt = ">=2.8"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["altissimo"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "B008"]
# S105: Enum string values for auth reason codes are not passwords
"src/altissimo/auth/core/models.py" = ["S105"]
"src/altissimo/auth/flask/__init__.py" = ["S105", "S107", "S310"]
# S112: Intentional try-except-continue for audience fallback
"src/altissimo/auth/providers/oidc.py" = ["S112"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["altissimo"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
